<resources>
    <string name="app_name">eventmatch</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ask_sign">Vous n\'avez pas de compte ?</string>
    <string name="ask_login">Vous avez déjà un compte ? </string>
    <string name="switch_login">Se connecter</string>
    <string name="switch_signup">S\'inscrire</string>
    <string name="pseudonyme">Pseudonyme</string>
    <string name="nom">Nom</string>
    <string name="prénom">Prénom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="address">Numéro et nom de la voie</string>
    <string name="city">Ville</string>


    <!-- Strings pour le Main -->
    <string name="retour_menu">Retour au Menu</string>
    <string name="page_creation">Page de Création d\'événements</string>
    <string name="page_liste">Liste d\'événements</string>

    <!-- Strings pour la page de création d'évents -->
    <string name="creation_event">Création d\'événements</string>
    <string name="event_name">Nom de l\'événement</string>
    <string name="event_start">Début de l\'événement :</string>
    <string name="event_choix_date">Choix de la date</string>
    <string name="event_choix_heure">Choix de l\'heure</string>
    <string name="event_end">Fin de l\'événement :</string>
    <string name="event_nb_participants">Nombre de participants :</string>
    <string name="event_type">Type de l\'événement :</string>
    <string name="event_button_save">Enregistrer l\'événement</string>
    <string name="event_button_clear">Vider les champs</string>
    <string name="title_activity_custom_list_view">CustomListView</string>

    <!-- Event list strings -->
    <string name="list_titre">Titre</string>
    <string name="list_debut">Début : </string>
    <string name="list_fin">Fin : </string>
    <string name="list_date">le XX/XX/XXXX à XX:XX</string>
    <string name="list_nb">NB PART </string>
    <string name="list_participant">participants</string>
    <string name="list_type">TYPE</string>
    <string name="list_typeevent">Type d\'événement : </string>
    <string name="list_participants">Participants :</string>

    <!-- Navigation bar menu strings -->
    <string name="title_search">Rechercher</string>
    <string name="title_favorites">Favoris</string>
    <string name="title_create">Créer</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Mon profil</string>
    <string name="Filtre">Filtres : </string>

    <!-- Profile menu strings -->
    <string name="title_my_events">Mes événements</string>
    <string name="title_my_account">Mon compte</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_security_conf">Sécurité et confidentialité</string>
    <string name="title_rate_app">Noter l\'application</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_disconnect">Se déconnecter</string>
    <string name="event_image_description">Image de l\'événement</string>
    <string name="import_image">Importer une image</string>
    <string name="profilename">NomProfil</string>


    <!-- Event Details strings -->
    <string name="eventdetails_button_join">Rejoindre l\'évenement</string>
    <string name="eventdetails_button_leave">Quitter l\'évenement</string>
    <string name="eventdetails_alreadyin">Vous êtes déjà dans l\'événement</string>

    <!-- Edit Event strings -->
    <string name="editevent_title">Modification d\'événements</string>
    <string name="editevent_reinit">Annuler les modifications</string>
    <string name="editevent_button_deleteuser">Supprimer ce participant</string>
    <string name="editevent_button_fermer">Fermer la page de modification</string>
    <string name="editevent_vous"> (Vous) </string>
    <string name="editevent_button_supp">Supprimer l\'événement</string>
    <string name="back">Retour</string>

    <!-- Account strings -->
    <string name="text_personnal_information">Informations personnelles</string>
    <string name="text_location">Localisation</string>
    <string name="text_username">Pseudonyme</string>
    <string name="text_address">Adresse</string>
    <string name="text_connection_information">Informations de connexion</string>
    <string name="text_email">Email</string>
    <string name="text_password">Mot de passe</string>
    <string name="text_lastname">Nom</string>
    <string name="text_firstname">Prénom</string>
    <string name="text_birthdate">Date de naissance</string>
    <string name="text_delete_account">Supprimer mon compte</string>

    <!-- -->
    <string name="description_back">Back</string>
    <string name="description_hint">Description</string>

    <!-- Feedback -->
    <string name="text_feedback">Donnez-nous votre feedback !</string>
    <string name="title_send_feedback">Envoyer mon feedback</string>
    <string name="text_feedback_use">Vous avez des idées pour nous aider à améliorer EventMatch ? Faites un retour et nous prendrons en compte votre avis !</string>
    <string name="text_edit_feedback">Envoyez-nous vos retours !</string>

    <!-- Notifications -->
    <string name="text_new_event">Nouveaux événements</string>
    <string name="text_new_events">Activez cette notification pour être notifié(e) des nouveaux événements.</string>
    <string name="text_event_starts">Début d\'un événement</string>
    <string name="text_event_starts_desc">Activez cette notification pour être notifié(e) du début des événements auxquels vous participez.</string>
    <string name="text_my_events_desc">Activez cette notification pour être notifié(e) des événements que vous gérez.</string>
    <string name="greeting_text">Bonjour !</string>
    <string name="theme_light">Jour</string>
    <string name="theme_dark">Nuit</string>

    <!-- OnBackPressedDialog strings -->
    <string name="dialog_title">Confirmation</string>
    <string name="dialog_text_quit">Êtes-vous sûr de vouloir quitter sans enregistrer les modifications ?</string>
    <string name="dialog_text_delete">Êtes-vous sûr de vouloir supprimer cette événement de la base de donnée ?</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_no">Non</string>

    <!-- Toasts strings --> <!-- TODO : A completer avec les autres dans les différents fichiers -->
    <string name="toast_remplir_champs">Erreur, merci de remplir tous les champs</string>
    <string name="toast_modif_success_event">Événement mis à jour avec succès</string>
    <string name="toast_modif_failure_event">Erreur lors de la mise à jour de l\'événement</string>
    <string name="toast_supp_success_event">Événement supprimé avec succès</string>
    <string name="toast_supp_failure_event">Erreur lors de la suppression de l\'événement</string>
    <string name="toast_join_success_event">Evénement rejoins avec succès</string>
    <string name="toast_delete_user">User deleted</string>
    <string name="toast_left_failure_owner">Impossible vous êtes le owner</string>
    <string name="toast_left_success">Vous avez quitté l\'événement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_joined">Mes Events</string>
    <string name="admin_panel">Panel Admin</string>
</resources>