<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_admin"
            android:title="@string/admin_panel"/>
    </group>
    <group>
        <item
            android:id="@+id/menu_events"
            android:title="@string/title_my_events"/>
        <item
            android:id="@+id/menu_account"
            android:title="@string/title_my_account"/>
        <item
            android:id="@+id/menu_notifications"
            android:title="@string/title_notifications"/>
    </group>

    <group>
        <item
            android:id="@+id/menu_rate"
            android:title="@string/title_rate_app"/>
        <item
            android:id="@+id/menu_feedback"
            android:title="@string/title_feedback"/>
    </group>

    <group>
        <item
            android:id="@+id/menu_disconnect"
            android:title="@string/title_disconnect"/>
    </group>
</menu>