<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.main.CreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creation_event"
                android:textAlignment="center"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/event_image_description"/>
            <Button
                android:id="@+id/btn_import_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_image"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_start"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/event_choix_date_debut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_date"/>
                <Button
                    android:onClick="test"
                    android:id="@+id/event_choix_heure_debut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_heure"/>
            </LinearLayout>
            <TextView
                android:id="@+id/affichage_debut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_end"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/event_choix_date_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_date"/>
                <Button
                    android:id="@+id/event_choix_heure_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_heure"/>

            </LinearLayout>
            <TextView
                android:id="@+id/affichage_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_nb_participants"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/event_nb_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/event_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <Button
                android:id="@+id/event_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_button_save"/>

            <Button
                android:id="@+id/event_button_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_button_clear"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>