<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.profile.EditEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editevent_title"
                android:textAlignment="center"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/editevent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_start"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/editevent_choix_date_debut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_date"/>
                <Button
                    android:onClick="test"
                    android:id="@+id/editevent_choix_heure_debut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_heure"/>
            </LinearLayout>
            <TextView
                android:id="@+id/editevent_affichage_debut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_end"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/editevent_choix_date_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_date"/>
                <Button
                    android:id="@+id/editevent_choix_heure_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_choix_heure"/>

            </LinearLayout>
            <TextView
                android:id="@+id/editevent_affichage_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_nb_participants"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/editevent_nb_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/editevent_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_participants"
                android:textSize="20sp"/>

            <ListView
                android:id="@+id/editevent_userlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/editevent_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_button_save"/>

            <Button
                android:id="@+id/editevent_button_reinit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editevent_reinit"/>
            <Button
                android:id="@+id/edit_event_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editevent_button_supp"/>
            <Button
                android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="debug"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>