<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        app:cardElevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="30sp"
                android:textAlignment="center"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:id="@+id/signup_email"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nom"
                android:id="@+id/signup_lastname"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prénom"
                android:id="@+id/signup_firstname"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/pseudonyme"
                android:id="@+id/signup_username"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/birth_date"
                android:id="@+id/signup_birthdate"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:editable="false"
                android:focusable="false"
                android:background="@drawable/custom_edit_text"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/address"
                android:id="@+id/signup_address"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/city"
                android:id="@+id/signup_city"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                />





            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password"
                android:id="@+id/signup_confirm_password"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_text"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/signup"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:id="@+id/signup_button"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_login"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_login"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/lavande"
                    android:textAlignment="center"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/switch_login"
                    />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>